fixed month active box-shadow not showing on mac bug

--- a/styles/helpers.less
+++ b/styles/helpers.less
@@ -46,6 +46,7 @@
 
 
 .box-shadow(@arguments) {
+  -webkit-box-shadow: @arguments;
   -moz-box-shadow: @arguments;
   box-shadow: @arguments;
 }
